--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 
 	<div id="main">
 	</div>
-	<script src="js/app.min.js"></script>
+	<script src="build/app.min.js"></script>
 </body>
 
 </html>
