Interface: Start index page layout

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="A document management system for creating and managing documents">
 	<meta name="author" content="Oladeji Femi femidotexe">
-
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet" />
 	<title>docqeep - Document Management System</title>
 
 </head>
