--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,9 @@
 	<meta name="author" content="Oladeji Femi femidotexe">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 	<title>docqeep - Document Management System</title>
 
 </head>
@@ -19,6 +22,9 @@
 	<div id="main">
 	</div>
 	<script src="build/app.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+	<script src="js/custom.js"></script>
 </body>
 
 </html>
